Added Graphs and Backend Patient Data Logic

--- a/emr-frontend/package.json
+++ b/emr-frontend/package.json
@@ -15,12 +15,14 @@
     "@fullcalendar/timegrid": "^6.1.11",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.6.8",
+    "chart.js": "^4.5.1",
     "emailjs-com": "^3.2.0",
     "express": "^4.19.2",
     "mongoose": "^8.4.0",
     "pinia": "^2.1.7",
     "v-calendar": "^3.1.2",
     "vue": "^3.4.21",
+    "vue-chartjs": "^5.3.3",
     "vue-multiselect": "^3.0.0",
     "vue-router": "^4.3.0",
     "vue-sidebar-menu": "^5.3.1",
