--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -8,7 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno_r4_minima]
-platform = renesas-ra
-board = uno_r4_minima
+[env:esp32c3]
+platform = espressif32
+board = esp32-c3-devkitc-02
 framework = arduino
+
+upload_speed = 921600
+monitor_speed = 115200
+
+build_flags = -DARDUINO_USB_MODE=1 -DARDUINO_USB_CDC_ON_BOOT=1
+
+monitor_filters = esp32_exception_decoder
